--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(http://getwallpapers.com/wallpaper/full/5/7/0/188889.jpg);
+  background-size: 100%;
 }
 
 code {
